--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -7,7 +7,6 @@
 }
 .content-container {
     width: 80%;
-    float: left;
     display: flex;
     flex-direction: column;
     padding-left: 30px;
@@ -37,6 +36,9 @@
 .page-container {
     display: flex;
 }
+.all-complains-container {
+    margin-bottom: 20px;
+}
 .complains-suggestions {
     background: #EBF1F6 0% 0% no-repeat padding-box;
     padding: 5px;
@@ -55,18 +57,6 @@
     margin-right: 10px;
 }
 
-/* .react-date-picker .react-date-picker__inputGroup__month{
-    display: none;
-}
-.react-date-picker .react-date-picker__inputGroup__divider {
-    display: none;
-}
-.react-date-picker .react-date-picker__inputGroup__day {
-    display: none;
-}
-.react-date-picker .react-date-picker__inputGroup__year {
-    display: none;
-} */
 .react-date-picker .react-daterange-picker__inputGroup{
     min-width: 200px;
 }
@@ -75,4 +65,11 @@
 }
 .filter-by-date {
     padding-right: 10px;
+}
+
+.content-container .line-chart, .content-container .simple-bar-chart{
+    width: 1000px;
+    padding: 15px;
+    box-shadow: 0px 0px 56px #00000021;
+    margin: 20px 0;
 }
