added side tweets container

--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -1,9 +1,8 @@
 .page-side-bar {
-    width: 20%;
-    float: left;
+    width: 10%;
     box-shadow: 5px 0px 50px #00000029;
     box-sizing: border-box;
-    padding: 30px;
+    padding: 30px 10px;
 }
 .navigation-menu {
     margin-top: 30px;
