--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -4,8 +4,18 @@
     box-sizing: border-box;
     padding: 30px 10px;
 }
+
+.logo-wrapper {
+margin-left: 25px;
+}
+
+.logo-wrapper img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
 .navigation-menu {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .navigation-menu ul {
