--- a/src/pages/Team/styles.css
+++ b/src/pages/Team/styles.css
@@ -1,9 +1,19 @@
 .team-container h2, .team-container h5{
     color: #000;
+    font-size: 3rem;
 }
 .team-container .MuiDataGrid-columnHeadersInner {
     /* border: 1px solid rgba(81, 81, 81, 1) !important;
     border-bottom: 1px solid rgba(81, 81, 81, 1) !important; */
+}
+
+.team-content-container {
+    flex-basis: 70%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    box-sizing: border-box;
 }
 
 .team-table .MuiDataGrid-columnHeaders{
