--- a/src/pages/Team/styles.css
+++ b/src/pages/Team/styles.css
@@ -8,12 +8,13 @@
 }
 
 .team-content-container {
-    flex-basis: 70%;
+    /* flex-basis: 80%;
     flex: 1;
     display: flex;
     flex-direction: column;
     padding-left: 30px;
-    box-sizing: border-box;
+    box-sizing: border-box; */
+    width: 80%;
 }
 
 .team-table .MuiDataGrid-columnHeaders{
