--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -1,5 +1,5 @@
 .page-side-bar {
-    width: 20%;
+    width: 17%;
     box-shadow: 5px 0px 50px #00000029;
     box-sizing: border-box;
     padding: 30px 0px 30px 10px;
@@ -7,13 +7,13 @@
 }
 
 .logo-wrapper {
-margin-left: 25px;
+    text-align: center;
+    margin-right: 10px;
+    min-height: 80px;
 }
 
 .logo-wrapper img {
-    width: 50px;
-    height: 50px;
-    object-fit: contain;
+    max-width: 80px;
 }
 .navigation-menu {
     margin-top: 20px;
