--- a/src/pages/Team/styles.css
+++ b/src/pages/Team/styles.css
@@ -52,3 +52,42 @@
     color: #fff;
     font-weight: bold;
 }
+  
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    width: 400px;
+    outline: none;
+  }
+  
+  .modal h2 {
+    margin-bottom: 10px;
+  }
+  
+  .modal p {
+    margin-bottom: 5px;
+  }
+  
+  .modal .comment-textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 8px;
+  }
+  
+  .modal .submit-button {
+    background-color: #4caf50;
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  .modal .close-button {
+    background-color: #f44336;
+    color: #fff;
+    margin-top: 10px;
+  }
+  
+  
