--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -63,7 +63,9 @@
     border-bottom: 3px solid red;
 }
 
-
+/* .date-picker-wrapper {
+    padding: 10px 10px 0 0 ;
+} */
 
 .complains-suggestions .com-text {
     font-size: 18px;
