--- a/src/pages/Team/styles.css
+++ b/src/pages/Team/styles.css
@@ -59,9 +59,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    padding: 20px;
+    padding: 40px;
     width: 400px;
     outline: none;
+    border-radius: 4px;
   }
   
   .modal h2 {
@@ -88,6 +89,10 @@
     background-color: #f44336;
     color: #fff;
     margin-top: 10px;
+  }
+
+  .modal-tag {
+    font-weight: 700;
   }
   
   
